--- a/UEMS/events/templates/events/events_home.html
+++ b/UEMS/events/templates/events/events_home.html
@@ -15,18 +15,32 @@
 
         <div class="events">
             {% for event in events %}
-                <div class="event-card">
-                    <img src="{{ event.poster.url }}" alt="{{ event.name }} Poster">
-                    <h3>{{ event.name }}</h3>
-                    <p><strong>Date:</strong> {{ event.start_datetime|date:"F d, Y" }}</p>
-                    <p><strong>Time:</strong> {{ event.start_datetime|time:"h:i A" }}</p>
-                    <p>Fees: {{ event.get_fees_display }}</p>
-                    <button>register</button>
-                </div>        
+                <a href="{% url 'events:page' slug=event.slug%}" class="event-link">
+                    <div class="event-card">
+                        <img src="{{ event.poster.url }}" alt="{{ event.name }} Poster">
+                        <h3>{{ event.name }}</h3>
+                        <p><strong>Date:</strong> {{ event.start_datetime|date:"F d, Y" }}</p>
+                        <p><strong>Time:</strong> {{ event.start_datetime|time:"h:i A" }}</p>
+                        <p>Fees: {{ event.get_fees_display }}</p>
+                        <button>Register</button>
+
+                    </div>   
+                </a>
+                   
             {% endfor %}
         </div>
         
-        
+                {% comment %} <!-- Confirmation Modal -->
+        <div id="confirmationModal" class="modal">
+            <div class="modal-content">
+                <p>Are you sure you want to register for this event?</p>
+                <div class="modal-buttons">
+                    <button id="confirmYes">Yes</button>
+                    <button id="confirmNo">No</button>
+                </div>
+            </div>
+        </div> {% endcomment %}
+
     
     </div>
 
