--- a/UEMS/templates/layout.html
+++ b/UEMS/templates/layout.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <a href="#" title="Event Homepage"><h2>MMU Event</h2></a>
+            <a href={% url 'events:home' %} title="Event Homepage"><h2>MMU Event</h2></a>
         </div>
         <div class="nav-right">
             <a href="#">About Us</a>
